# ghc-syntax-highlighter

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  cabal.project  ghc-syntax-highlighter.cabal
.github/workflows/: ci.yaml
GHC/: SyntaxHighlighter.hs
data/: Forall.hs  LambdaCase.hs  Main.hs  Pragmas.hs  TypeFamily.hs
tests/GHC/: SyntaxHighlighterSpec.hs
