cabal-version:   1.18
name:            ghc-syntax-highlighter
version:         0.0.6.0
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.1
homepage:        https://github.com/mrkkrp/ghc-syntax-highlighter
bug-reports:     https://github.com/mrkkrp/ghc-syntax-highlighter/issues
synopsis:        Syntax highlighter for Haskell using lexer of GHC itself
description:     Syntax highlighter for Haskell using lexer of GHC itself.
category:        Text
build-type:      Simple
data-files:      data/*.hs
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/ghc-syntax-highlighter.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  GHC.SyntaxHighlighter
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5.0,
        ghc-lib-parser >=8.10 && <8.11,
        text >=0.2 && <1.3

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wcompat -Wincomplete-record-updates
            -Wincomplete-uni-patterns -Wnoncanonical-monad-instances

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:    GHC.SyntaxHighlighterSpec
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5.0,
        ghc-syntax-highlighter -any,
        text >=0.2 && <1.3,
        hspec >=2.0 && <3.0

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
