cabal-version:   2.4
name:            ghc-syntax-highlighter
version:         0.0.12.0
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.6.3 ghc ==9.8.2 ghc ==9.10.1
homepage:        https://github.com/mrkkrp/ghc-syntax-highlighter
bug-reports:     https://github.com/mrkkrp/ghc-syntax-highlighter/issues
synopsis:        Syntax highlighter for Haskell using the lexer of GHC
description:     Syntax highlighter for Haskell using the lexer of GHC.
category:        Text
build-type:      Simple
data-files:      data/*.hs
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/ghc-syntax-highlighter.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  GHC.SyntaxHighlighter
    default-language: GHC2021
    build-depends:
        base >=4.17 && <5,
        ghc-lib-parser >=9.10 && <9.11,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2 && <3
    hs-source-dirs:     tests
    other-modules:      GHC.SyntaxHighlighterSpec
    default-language:   GHC2021
    build-depends:
        base >=4.17 && <5,
        ghc-syntax-highlighter,
        text >=0.2 && <2.2,
        hspec >=2 && <3

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
